fix: brawlerの名前が画面右下のBackButtonより上に来ないようにz-indexを調整

--- a/apps/app/app/[locale]/players/[tag]/brawlers/_components/BrawlerCard/index.module.scss
+++ b/apps/app/app/[locale]/players/[tag]/brawlers/_components/BrawlerCard/index.module.scss
@@ -84,7 +84,7 @@
       position: absolute;
       right: 4px;
       bottom: 4px;
-      z-index: 10000;
+      z-index: 1000;
       font-size: 10px;
       color: var(--white);
       font-weight: bold;
